--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-quick-start",
+  "name": "g-office",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A Google Docs app",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/DonsWayo/g-office",
   "keywords": [
     "Electron",
     "quick",
@@ -17,6 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^4.0.1"
+    "electron": "4.0.1",
+    "electron-packager": "^13.0.1"
   }
 }
